# fcds

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: main.cc
src/network/: http.cc  http.h  utils.cc  utils.h
